# rstarc

./: .gitignore  .gitmodules  Cargo.toml  Pipfile  README.md  build.rs  check  mkrun.py  pyproject.toml
crates/rstarc_types/: Cargo.toml
crates/rstarc_types/src/: lib.rs
runtime/roll/: Cargo.toml
runtime/roll/src/: alloc.rs  gc.rs  gc_roots.rs  io.rs  lib.rs  rust_lang_items.rs  say.rs  syscall.rs  value_repr.rs
src/: ast.rs  ast_print.rs  ast_walker.rs  base_analysis.rs  interpreter.rs  lang_constructs.rs  lexer.rs  main.rs  parser.lalrpop  pretty_print.rs  runtime_error.rs  source_loc.rs
src/base_analysis/: control_flow_verifier.rs  mod.rs  scoping.rs
src/codegen/: closure_layout.rs  link.rs  llvm_api.rs  lower_llvm.rs  mod.rs  simple_ir.rs
src/syntax/: ast.rs  ast_print.rs  ast_walker.rs  lexer.rs  mod.rs  parser.lalrpop  pretty_print.rs  source_loc.rs
test/: test-runner.py
test/programs/: blocks.rock  blocks.rock.expected.toml  fizzbuzz_literal.rock.expected.toml  fizzbuzz_literal.star  functions.rock  functions.rock.expected.toml  treesort.rock  treesort.rock.expected.toml  variable_scoping.rock  variable_scoping.rock.expected.toml
test/programs/passes/codegen/: call_non_func.rock  call_non_func.rock.expected.toml  control_flow.rock  control_flow.rock.expected.toml  func_arity.rock  func_arity.rock.expected.toml  out_of_scope_write.rock  out_of_scope_write.rock.expected.toml
test/programs/passes/lexing/: owned.rock  owned.rock.expected.toml
test/programs/passes/parsing/: owned.rock  owned.rock.expected.toml  precedence.rock  precedence.rock.expected.toml
test/programs/passes/weeding/: func_in_loop.rock  func_in_loop.rock.expected.toml  return_out_of_func.rock  return_out_of_func.rock.expected.toml
test/programs/runnable/: closure.rock  closure.rock.expected.toml  comparison.py  comparison.rock  comparison.rock.expected.toml  equality_comparison.rock.expected.toml  inc_dec.rock  inc_dec.rock.expected.toml  logical_ops.py  logical_ops.rock  logical_ops.rock.expected.toml  logical_short_circuit.rock  logical_short_circuit.rock.expected.toml  order_comparison.py  order_comparison.rock  order_comparison.rock.expected.toml  treesort.rock.expected.toml  truthiness.rock  truthiness.rock.expected.toml
test/programs/type_semantics/: equality_comparison.rock
