[package]
authors = ["William Bain <bain.william.a@gmail.com>"]
name = "rstarc"
version = "0.1.0"

[build-dependencies]
lalrpop = "0.15.2"

[patch.crates-io]
llvm-sys = { path = "vendor/llvm_sys" }

[dependencies]
clap = "2.32.0"
lalrpop-util = "0.15.2"
lazy_static = "1.0.2"
llvm-sys = "60.1"
regex = "1.0.2"
tempdir = "0.3.7"
void = "1.0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
