[package]
authors = ["William Bain <bain.william.a@gmail.com>"]
name = "rstarc"
version = "0.1.0"

[build-dependencies]
lalrpop = "0.16.1"

[dependencies]
bytes = "0.4.10"
clap = "2.32.0"
lalrpop-util = "0.16.1"
lazy_static = "1.0.2"
llvm-sys = "60.1"
regex = "1.0.2"
tempdir = "0.3.7"
void = "1.0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
