[package]
authors = ["William Bain <bain.william.a@gmail.com>"]
name = "roll"
version = "0.1.0"

[features]
ad-hoc-debugs = []

[dependencies]
libc = { version = "0.2", default-features = false }
rstarc_types = { path = "../../crates/rstarc_types" }

[lib]
crate-type = ["staticlib"]
name = "roll"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
